<resources>
    <string name="app_name">MedicApp</string>
    <string name="register_button">Registrarse</string>
    <string name="log_in_button">Acceder</string>
    <string name="welcome">Bienvenido!</string>
    <string name="user_name_hint">Nombre de Usuario</string>
    <string name="user_password_hint">Contraseña</string>
    <string name="login_user_button_text">Acceder</string>
    <string name="login_ok">Log In Correcto, accediendo</string>
    <string name="login_error">El nombre de usuario y/o la contraseña son incorrectos, vuelva a intentarlo.</string>
    <string name="add_user_button_text">Registrarse</string>
    <string name="register_ok">Se ha registrado el médico correctamente.</string>
    <string name="register_error">El nombre de usuario elegido ya está cogido, inténtelo de nuevo!</string>
    <string name="add_patient_name">Nombre y apellidos *</string>
    <string name="add_dni">DNI *</string>
    <string name="add_sex">Sexo *</string>
    <string name="female">MUJER</string>
    <string name="male">HOMBRE</string>
    <string name="add_address">Dirección *</string>
    <string name="add_birthdate">Fecha de nacimiento *</string>
    <string name="add_ss_number">Número de la Seguridad Social *</string>
    <string name="add_patient_button">AÑADIR PACIENTE</string>
    <string name="add_admission_date">Fecha de ingreso</string>
    <string name="add_patient_error">Debe rellenar todos los campos marcados con *</string>
    <string name="title_activity_patient_symptoms">PatientSymptomsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="add_symptom">Síntoma *</string>
    <string name="high_priority">ALTA</string>
    <string name="med_priority">MEDIA</string>
    <string name="low_priority">BAJA</string>
    <string name="add_description">Descripción</string>
    <string name="add_insert_description">Añade una descripción...</string>
    <string name="add_symptom_button">AÑADIR SÍNTOMA</string>
    <string name="add_list_priority">Gravedad *</string>
    <string name="add_list_state">Estado *</string>
    <string name="state_active">Activo</string>
    <string name="state_inactive">No activo</string>
    <string name="add_symptom_error">El síntoma ya exise</string>
    <string name="pacient_name">Nombre y apellidos:</string>
    <string name="pacient_dni">DNI:</string>
    <string name="edit_sex">Sex:</string>
    <string name="pacient_ss">Número de la Seg. Social: </string>
    <string name="pacient_address">Dirección:</string>
    <string name="pacient_birthdate">Fecha de nacimiento:</string>
    <string name="edit_patient_name">Nuevo nombre y apellidos</string>
    <string name="edit_dni">Nuevo DNI</string>
    <string name="edit_ss_number">Nuevo número de la Seguridad Social</string>
    <string name="edit_address">Nueva dirección</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="edit_birthdate">Nueva fecha de nacimiento</string>
    <string name="pacient_admission_date">Fecha de ingreso:</string>
    <string name="edit_admission_date">Nueva fecha de ingreso</string>
    <string name="save_changes">GUARDAR CAMBIOS</string>
    <string name="discharge_patient">Dar de alta al paciente</string>
    <string name="discharge_patient_description">¿Está seguro de que quiere dar de alta al paciente?. Si acepta, el paciente dejará de aparecer en su lista de pacientes y perderá todos los síntomas que haya añadido.</string>
    <string name="accept_discharge">Dar de alta</string>
    <string name="cancel">CANCELAR</string>
    <string name="title_activity_symptom_details">SymptomDetailsActivity</string>
    <string name="show_symptom_state">Estado</string>
    <string name="show_symptom_priority">Gravedad</string>
    <string name="delete_symptom">Borrar síntoma</string>
    <string name="delete_symptom_text">¿Estás seguro de que quieres eliminar este síntoma?</string>
    <string name="accept_delete">Borrar</string>
    <string name="show_symptom">Síntoma:</string>
    <string name="new_symptom_name">Cambiar síntoma...</string>
    <string name="my_account">Mi cuenta</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <string name="user">Usuario</string>
    <string name="patient_number">Número de pacientes: </string>
    <string name="symptom_number">Número de síntomas activos: </string>
    <string name="member_since">Miembro desde: </string>
    <string name="delete_account">Borrar mi cuenta</string>
    <string name="delete_account_text">¿Está seguro de que quiere borrar su cuenta? Se perderá toda la información que haya guardado de sus pacientes. \nEsta acción no se puede deshacer.</string>
    <string name="user_name_text">Nombre de usuario</string>
    <string name="new_user_name">Cambiar nombre de usuario</string>
    <string name="accept_button">ACEPTAR</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="repite_password">Repita la contraseña</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="menu_action_users">Usuarios</string>
    <string name="menu_action_admins">Administradores</string>
    <string name="menu_action_logs">Logs</string>
    <string name="menu_action_my_account">Mi cuenta</string>
    <string name="add_admin">Añadir Administrador</string>
    <string name="title_activity_admin_detail">AdminDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="admin">Administrador</string>
    <string name="actions_number">Número de acciones</string>
    <string name="delete_admin_text">¿Está seguro de que quiere borrar esta cuenta de administrador? Esta acción no se puede deshacer</string>
    <string name="delete_admin_account">Borrar administrador</string>
    <string name="description">Descripción</string>
    <string name="timestamp">Timestamp</string>
</resources>
