<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_us_ad_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.medic.medicapp.ChangeMyAccountInfoActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@android:color/primary_text_light"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/user_name_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_old_username"
            android:layout_gravity="start"
            android:textColor="@android:color/primary_text_light"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@android:color/primary_text_light"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/new_user_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/et_user_name"
            android:hint="@string/user_name_hint" />


        <Button
            android:id="@+id/b_change_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_button"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/primary_text_dark"
            android:background="@color/colorPrimary"
            android:onClick="onClickChangeUser"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@android:color/primary_text_light"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/change_password"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password_1"
            style="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password_2"
            style="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/repite_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/b_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_button"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/primary_text_dark"
            android:background="@color/colorPrimary"
            android:onClick="onClickChangePassword"
            android:layout_gravity="center" />



    </LinearLayout>

</LinearLayout>
