<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.medic.medicapp.LogInActivity">

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password_hint"
        android:inputType="textPassword"
        android:ems="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:id="@+id/b_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="logInUser"
        android:text="@string/login_user_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />



</LinearLayout>