<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.medic.medicapp.AddPatientActivity"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_name"
        android:hint="@string/add_patient_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_dni"
        android:hint="@string/add_dni"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@android:color/primary_text_light"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/add_sex"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <!-- Elección del sexo del paciente -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="2">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/primary_text_light"
                android:id="@+id/buttonF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/female"
                android:text="@string/female"
                android:layout_weight="1"
                android:onClick="onSexSelected"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/primary_text_light"
                android:id="@+id/buttonM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/male"
                android:text="@string/male"
                android:layout_weight="1"
                android:onClick="onSexSelected"/>



        </LinearLayout>

        <!-- RadioGroup for visible selection of a sex -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

            <RadioButton
                android:id="@+id/radButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>


        </RadioGroup>

    </FrameLayout>

    <!--Social Security Number-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_ssNumber"
        android:hint="@string/add_ss_number"/>

    <!--Address-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_address"
        android:hint="@string/add_address"/>

    <!--Birth Date-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@android:color/primary_text_light"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/add_birthdate"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_gravity="center">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_day_birthdate"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="DD"
            android:gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_month_birthdate"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="MM"
            android:gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_year_birthdate"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="YYYY"
            android:gravity="center"/>

    </LinearLayout>


    <!--Admission Date-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@android:color/primary_text_light"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/add_admission_date"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_gravity="center">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_day_admission"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="DD"
            android:gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_month_admission"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="MM"
            android:gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_year_admission"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="YYYY"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/b_add_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_patient_button"
        style="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/primary_text_dark"
        android:background="@color/colorPrimary"
        android:onClick="onClickAddPatient"
        android:layout_gravity="center" />


</LinearLayout>
